[gd_scene load_steps=5 format=3 uid="uid://dtok74cnus8b6"]

[ext_resource type="Script" path="res://scripts/question.gd" id="1_1scps"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4sbc"]
size = Vector2(750, 250)

[sub_resource type="CircleShape2D" id="CircleShape2D_akqwc"]

[sub_resource type="LabelSettings" id="LabelSettings_uciqb"]
line_spacing = 5.0
font_size = 28

[node name="question" type="Node2D"]

[node name="question" type="Area2D" parent="."]
script = ExtResource("1_1scps")

[node name="shape" type="CollisionShape2D" parent="question"]
shape = SubResource("RectangleShape2D_a4sbc")

[node name="spawn point" type="CollisionShape2D" parent="question"]
position = Vector2(67, 72)
shape = SubResource("CircleShape2D_akqwc")

[node name="quant1" type="Button" parent="question"]
offset_left = -218.0
offset_top = -89.0
offset_right = -190.0
offset_bottom = -58.0
scale = Vector2(4.74818, 1.89058)
metadata/_edit_use_anchors_ = true

[node name="quant2" type="Button" parent="question"]
offset_left = -285.0
offset_top = -42.0
offset_right = -256.0
offset_bottom = -11.0
scale = Vector2(5.12062, 1.5339)
metadata/_edit_use_anchors_ = true

[node name="period" type="Button" parent="question"]
offset_left = -65.0
offset_top = -38.0
offset_right = -47.0
offset_bottom = -7.0
scale = Vector2(2.13185, 1.53042)

[node name="tool" type="Button" parent="question"]
offset_left = -25.0
offset_top = -83.0
offset_right = -17.0
offset_bottom = -75.0
scale = Vector2(38.1948, 6.28031)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = -375.0
offset_top = -125.0
offset_right = 376.0
offset_bottom = 125.0
text = "Car out of Control in town
A car starts from rest and accelerates uniformly at a
rate of 2.5 m/s^2. After 8s, what is the final velocity of 
the car?
physical quantity discovered: "
label_settings = SubResource("LabelSettings_uciqb")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="question/quant1" to="question" method="_on_quant_1_pressed"]
[connection signal="pressed" from="question/quant2" to="question" method="_on_quant_2_pressed"]
[connection signal="pressed" from="question/period" to="question" method="_on_period_pressed"]
[connection signal="pressed" from="question/tool" to="question" method="_on_tool_pressed"]
